<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launch_utils</name>
  <version>0.0.0</version>
  <description>ROS2 pkg with utils functions to use launch pkgs</description>
  <maintainer email="cristian.nova@uc.cl">novi</maintainer>
  <license>Apache License 2.0</license>
  
  <build_depend>turtle_tf2_py</build_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
